game-of-pods/gallery-of-bravos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iron-gallery-service
spec:
  selector:
    app: irongallery-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
